tests/basic/prim/prim_02.pan.out
tests/basic/prim/prim_02.pan:3:1-3: error: unable to verify type of a4
tests/basic/prim/prim_02.pan:6:1-3: error: unable to verify type of b4
tests/basic/prim/prim_02.pan:9:1-3: error: unable to verify type of c4
tests/basic/prim/prim_02.pan:12:1-3: error: unable to verify type of d4
tests/basic/prim/prim_02.pan:18:1-3: error: unable to verify type of a8